--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
         "mobiledetect/mobiledetectlib": "^2.8",
+        "muffin/trash": "^3.1",
         "robmorgan/phinx": "^0.13.4"
     },
     "require-dev": {
